@@ -468,7 +468,6 @@ void AGE_Frame::CreateGeneralControls()
     General_ScrollSpace->Add(General_Something_Grid2);
 
     General_Scroller->SetSizer(General_ScrollSpace);
-    General_Scroller->SetScrollRate(0, 15);
 
     General_Main->Add(General_TopRow, 0, wxEXPAND | wxALL, 5);
     General_Main->Add(General_Scroller, 1, wxEXPAND | wxBOTTOM | wxLEFT | wxRIGHT, 5);
@@ -1616,7 +1615,6 @@ void AGE_Frame::CreateUnknownControls()
     Unknown_ScrollSpace->Add(pointers_box);
 
     RMS_Scroller->SetSizer(Unknown_ScrollSpace);
-    RMS_Scroller->SetScrollRate(0, 15);
 
     Unknowns->Add(Unknowns_ListArea, 21, wxEXPAND | wxRIGHT, 5);
     Unknowns->Add(RMS_Scroller, 65, wxEXPAND);
