@@ -13,6 +13,10 @@ I recommend [url=http://aok.heavengames.com/blacksmith/showfile.php?fileid=10819
 [b]Version History[/b]
 Guide makers et cetera, please include the version into which your guide was written.
 
+Version [b]2021.4.18[/b]:
+-Scroll rate of tabs can be adjusted in options.
+-Window no longer spawns larger than screen space.
+
 Version [b]2021.4.11[/b]:
 -Age of Empires DE SLP shadows displayed.
 -Sprite cache based on memory used instead of sprite count.
